# CS744-PA3-Custom-Malloc

./: .gitignore  README.md
Outputs/: mm1.c - Best Fit - allocate space from END.txt  mm1.c - Best Fit - allocate space from START.txt  mm2 v001.c  mm2.c v002 - realloc optimised.txt  mm2.c v003 - first fit.txt
PA_3_handout/: CMakeLists.txt  Makefile  README  mm.c  mm1.c  mm2.c
